--- a/src/panhandler/templates/panhandler/edit_skillet.html
+++ b/src/panhandler/templates/panhandler/edit_skillet.html
@@ -659,8 +659,6 @@
 
                 snippet_def['outputs'].push(output_def);
             });
-
-
         }
 
         function update_rest_snippet() {
@@ -981,6 +979,33 @@
 
         }
 
+        function show_test_snippet() {
+
+            let context_object = $('#id_test_snippet_context');
+            let initial_context = {};
+
+            if (skillet['type'].startsWith('pan')) {
+                initial_context['ip_address'] = '10.10.10.10';
+                initial_context['username'] = 'admin';
+                initial_context['password'] = 'admin';
+
+                update_panos_snippet();
+            } else {
+                update_snippet(skillet['type']);
+            }
+
+            $.each(skillet_variables, function (index, v) {
+                initial_context[v.name] = v.default;
+            });
+
+            if (context_object.val() === '') {
+                context_object.val(JSON.stringify(initial_context, null, '  '));
+            }
+
+            $('#show_test_snippet_modal').modal();
+
+        }
+
         function extract_variables(template_str) {
             /**
              * Post the template_str to app server to extract any defined jinja2 variables. Any found variables
@@ -1066,6 +1091,74 @@
                     hljs.highlightBlock(results_code[0]);
 
                 });
+        }
+
+        function test_snippet() {
+            /**
+             * Post the snippet to app server to execute and test the snippet. Only works on 'pan' type skillets
+             * for now.
+             */
+
+            let doc = $(document.documentElement);
+            doc.css('cursor', 'progress');
+            let snippet_name = $('#id_panos_snippet_name').val();
+
+            update_skillet_from_ui();
+
+            let context_input = $('#id_test_snippet_context');
+            let context = context_input.val();
+
+            let context_var = {};
+            try {
+                context_var = JSON.parse(context);
+            } catch (e) {
+                alert('Could not convert Context into proper JSON!');
+                return false;
+            }
+
+            let results_input = $('#id_test_skillet_results');
+
+            results_input.val('Contacting Device ... ');
+
+            let test_skillet = skillet;
+            let test_snippet = get_snippet_definition(snippet_name);
+
+            if (! test_snippet['cmd'] in ['get', 'show', 'parse']) {
+                alert('Snippet Debug only supported for get, show, and parse commands');
+                return false;
+            }
+
+            test_skillet['snippets'] = [test_snippet];
+
+            $.ajax({
+                method: "POST",
+                url: "/panhandler/test_skillet",
+                headers: {'X-CSRFToken': '{{ csrf_token }}'},
+                contentType: "application/json",
+                dataType: "json",
+                data: JSON.stringify({"skillet": test_skillet, "context": context_var})
+            })
+                .fail(function (message) {
+                    alert('error');
+                    console.log(message);
+                    doc.css('cursor', '');
+                })
+                .done(function (data) {
+                    let results = JSON.stringify(data, null, '  ');
+                    doc.css('cursor', '');
+                    let results_code = $('#id_test_skillet_results_code');
+                    results_code.html(results);
+
+                    $('#show_test_skillet_results_modal').modal();
+
+                    hljs.highlightBlock(results_code[0]);
+
+                });
+        }
+
+        function cancel_test_snippet() {
+            let snippet_name = $('#id_panos_snippet_name').val();
+            edit_snippet_by_name(snippet_name);
         }
 
         function add_all_variables(variable_list) {
@@ -1778,51 +1871,53 @@
                         <i class="fa fa-plus"></i>Add Output
                     </a>
                     <div id="panos_outputs_add" class="collapse">
-                    <div class="form-row">
-                        <div class="form-group col-md-6">
-                            <label for="id_panos_output_name">Variable Name:</label>
-                            <input type="text" value="" placeholder="" class="form-control"
-                                   id="id_panos_output_name">
+                        <div class="form-row">
+                                                 <div class="form-group col-md-6">
+                                                 <label for="id_panos_output_name">Variable Name:</label>
+                                                 <input type="text" value="" placeholder="" class="form-control"
+                                                 id="id_panos_output_name">
+                                                 </div>
+                                                 <div class="form-group col-md-6">
+                                                 <label for="id_panos_output_key">Capture Type:</label>
+                                                 <select id="id_panos_output_key" class="form-control">
+                                                 <option value="capture_list" selected="selected">Capture List</option>
+                                                 <option value="capture_pattern">Capture Pattern</option>
+                                                 <option value="capture_value">Capture Value</option>
+                                                 <option value="capture_object">Capture Object</option>
+                                                 </select>
+                                                 </div>
+                                                 </div>
+                        <div class="form-group">
+                            <label for="id_panos_output_filter">Filter Items:</label>
+                            <input type="text" value="" class="form-control" id="id_panos_output_filter"
+                                data-modal_source="id_panos_output_key" data-modal_value="capture_list"
+                                title="Boolean Expression where only passing items will be added to the captured list">
                         </div>
-                        <div class="form-group col-md-6">
-                            <label for="id_panos_output_key">Capture Type:</label>
-                            <select id="id_panos_output_key" class="form-control">
-                                <option value="capture_list" selected="selected">Capture List</option>
-                                <option value="capture_pattern">Capture Pattern</option>
-                                <option value="capture_value">Capture Value</option>
-                                <option value="capture_object">Capture Object</option>
-                            </select>
-                        </div>
-                    </div>
-                    <div class="form-group">
-                        <label for="id_panos_output_filter">Filter Items:</label>
-                        <input type="text" value="" class="form-control" id="id_panos_output_filter"
-                               data-modal_source="id_panos_output_key" data-modal_value="capture_list"
-                               title="Boolean Expression where only passing items will be added to the captured list">
-                    </div>
-                    <div class="form-group">
-                        <label for="id_panos_output_value">XPath Query:</label>
-                        <div class="input-group">
-                            <input type="text" value="" placeholder="" class="form-control"
-                                   id="id_panos_output_value"
-                                   title="Query used to find and return values from the output of this snippet.">
-                            <div class="input-group-append">
-                            <span class="input-group-text">
-                                <a href="#" onclick="add_new_output('panos');">
-                                    <i class="fa fa-plus"></i>
-                                </a>
-                            </span>
-                            </div>
-                        </div>
+                        <div class="form-group">
+                                                   <label for="id_panos_output_value">XPath Query:</label>
+                                                   <div class="input-group">
+                                                   <input type="text" value="" placeholder="" class="form-control"
+                                                   id="id_panos_output_value"
+                                                   title="Query used to find and return values from the output of this snippet.">
+                                                   <div class="input-group-append">
+                                                   <span class="input-group-text">
+                                                   <a href="#" onclick="add_new_output('panos');">
+                                                   <i class="fa fa-plus"></i>
+                                                   </a>
+                                                   </span>
+                                                   </div>
+                                                   </div>
+                                                   </div>
                     </div>
                 </div>
 
                 <div class="modal-footer">
-                    <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+                    <button type="button" class="btn btn-secondary"
+                            onclick="show_test_snippet()" data-dismiss="modal">Debug Snippet</button>
+                    <button type="button" class="btn btn-danger" data-dismiss="modal">Close</button>
                     <button type="button" class="btn btn-primary" onclick="update_panos_snippet()"
                             data-dismiss="modal">Update
                     </button>
-
                 </div>
             </div>
         </div>
@@ -2150,7 +2245,7 @@
         </div>
     </div>
 
-    <!-- Test Snippet Modal -->
+    <!-- Test Skillet Modal -->
     <div class="modal fade" id="show_test_skillet_modal" tabindex="-1" role="dialog"
          aria-labelledby="show_test_skillet_modal"
          aria-hidden="true">
@@ -2177,8 +2272,45 @@
                     <input type="hidden" id="id_test_skillet_results"/>
                 </div>
                 <div class="modal-footer">
-                    <button type="button" class="btn btn-secondary" data-dismiss="modal">Cancel</button>
+                    <button type="button" class="btn btn-danger" data-dismiss="modal">Cancel</button>
                     <button type="button" class="btn btn-primary" onclick="test_skillet()">Test
+                    </button>
+                </div>
+            </div>
+        </div>
+    </div>
+    
+    <!-- Test Snippet Modal -->
+    <div class="modal fade" id="show_test_snippet_modal" tabindex="-1" role="dialog"
+         aria-labelledby="show_test_snippet_modal"
+         aria-hidden="true">
+        <div class="modal-dialog modal-lg" role="document">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <h5 class="modal-title" id="test_snippet_label">Test Snippet</h5>
+                    <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                        <span aria-hidden="true">&times;</span>
+                    </button>
+                </div>
+                <div class="modal-body" style="overflow-y: auto">
+                    <p class="card-text">
+                        This will execute the snippet using the provided context. This is a great place to
+                        explore output capturing and other syntax options before saving your snippet.
+                    </p>
+                    <label for="id_test_snippet_context">Context:</label>
+                    <textarea class="form-control" rows="5" id="id_test_snippet_context"></textarea>
+                    <p class="small muted text-right m-0">
+                        <a href="#" onclick="enlarge_text_area('id_test_snippet_context')">
+                            <i class="fa fa-edit"></i>
+                        </a>
+                    </p>
+                    <input type="hidden" id="id_test_snippet_results"/>
+                    <input type="hidden" id="id_test_snippet_snippet_name"/>
+                </div>
+                <div class="modal-footer">
+                    <button type="button" class="btn btn-danger" data-dismiss="modal"
+                        onclick="cancel_test_snippet();">Cancel</button>
+                    <button type="button" class="btn btn-primary" onclick="test_snippet()">Test
                     </button>
                 </div>
             </div>
